--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@ html, body {
   padding: 14px 16px;
   background: rgba(5,5,5,.94);
   border-left: 4px solid #00ff9c;
-  min-width: 350px;
+  min-width: 360px;
   box-shadow: 0 0 25px rgba(0,0,0,.9);
 }
 
 .hud-title { font-size:18px; font-weight:650; color:#fff }
 .hud-sub  { font-size:13px; color:#bdbdbd }
 
-/* BLOCCO GENERALE */
+/* BLOCCO PROVINCIA */
 #globalBox {
   margin-top:10px;
   padding:8px;
@@ -75,7 +75,7 @@ html, body {
 }
 #refPanel li { font-size:12px; color:#fff }
 
-/* LEGENDA FISSA */
+/* LEGENDA */
 #legend {
   margin-top:12px;
   padding-top:8px;
@@ -92,15 +92,13 @@ html, body {
   height:12px;
   border-radius:50%;
 }
-.flag {
-  font-size:14px;
-}
 .triangle {
   width:0;height:0;
   border-left:7px solid transparent;
   border-right:7px solid transparent;
   border-bottom:12px solid #00ff9c;
 }
+.flag { font-size:14px }
 
 /* LABEL COMUNI */
 .label-comune {
@@ -119,7 +117,6 @@ html, body {
   <div class="hud-title" id="hudTitle">Provincia di Verona</div>
   <div class="hud-sub" id="hudSub">Vista generale</div>
 
-  <!-- STATO GENERALE -->
   <div id="globalBox">
     <h4>Stato generale – provincia</h4>
     <div class="stat-row">
@@ -137,12 +134,11 @@ html, body {
 
   <ul id="refPanel" style="display:none"></ul>
 
-  <!-- LEGENDA -->
   <div id="legend">
-    <div class="legend-row"><span class="dot green"></span> Comune con referenti</div>
-    <div class="legend-row"><span class="dot orange"></span> Comune orfano</div>
-    <div class="legend-row"><span class="flag">🚩</span> Stato avanzamento sul territorio</div>
-    <div class="legend-row"><span class="dot green"></span> Farmacia privata</div>
+    <div class="legend-row"><span class="dot" style="background:#00ff9c"></span> Comune con referenti</div>
+    <div class="legend-row"><span class="dot" style="background:#ffaa00"></span> Comune orfano</div>
+    <div class="legend-row"><span class="flag">🚩</span> Avanzamento territorio</div>
+    <div class="legend-row"><span class="dot" style="background:#00ff9c"></span> Farmacia privata</div>
     <div class="legend-row"><span class="triangle"></span> Farmacia comunale</div>
   </div>
 </div>
@@ -156,57 +152,73 @@ L.tileLayer(
 'https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png'
 ).addTo(map);
 
-/* STATO */
+/* ==== STATO ==== */
 const statoComuni = {};
 const layerComuni = {};
 const flagLayer = L.layerGroup().addTo(map);
+const farmLayer = L.layerGroup().addTo(map);
+
 let selectedComune=null;
 let showRefs=false;
 
 const nomeComune = p=>p.nome||p.DENOM_COM||p.name;
 
-/* CONTATORI */
+/* ==== FARMACIE DEMO ==== */
+const farmacie = [
+  {
+    nome:"Farmacia Centrale",
+    comune:"Verona",
+    lat:45.438, lng:10.992,
+    tipo:"privata",
+    indirizzo:"Via Roma 1",
+    tel:"045 0000001"
+  },
+  {
+    nome:"Farmacia San Zeno",
+    comune:"Verona",
+    lat:45.443, lng:10.980,
+    tipo:"comunale",
+    indirizzo:"Piazza Corrubbio",
+    tel:"045 0000002"
+  }
+];
+
+/* ==== CONTATORI ==== */
 function aggiornaContatori(){
-  const tot=Object.keys(statoComuni).length;
-  const ok=Object.values(statoComuni).filter(c=>c.referenti.length>0).length;
-  cntOk.innerText=ok;
-  cntNo.innerText=tot-ok;
+  const tot = Object.keys(statoComuni).length;
+  const ok = Object.values(statoComuni).filter(c=>c.referenti.length>0).length;
+  cntOk.innerText = ok;
+  cntNo.innerText = tot-ok;
 }
 
-/* STILE COMUNI */
+/* ==== STILE COMUNI ==== */
 function aggiornaStile(nome){
-  const layer=layerComuni[nome];
-  const attivo=statoComuni[nome].referenti.length>0;
+  const layer = layerComuni[nome];
+  const attivo = statoComuni[nome].referenti.length>0;
   layer.setStyle({
     color: attivo ? '#00ff9c' : '#ffaa00',
     weight: attivo ? 2 : 1,
-    fillOpacity: attivo ? 0.15 : 0
+    fillOpacity: attivo ? 0.06 : 0
   });
 }
 
-/* BANDIERE */
+/* ==== BANDIERE ==== */
 function aggiornaBandiere(){
   flagLayer.clearLayers();
   if(selectedComune) return;
-
-  Object.entries(statoComuni).forEach(([nome, dati])=>{
-    const layer = layerComuni[nome];
-    const center = layer.getBounds().getCenter();
-    const icon = L.divIcon({
-      html: dati.referenti.length>0 ? '🚩' : '🏳️',
-      className:'',
-      iconSize:[20,20]
-    });
+  Object.entries(statoComuni).forEach(([nome,d])=>{
+    const center = layerComuni[nome].getBounds().getCenter();
+    const icon = L.divIcon({html:d.referenti.length?'🚩':'🏳️',className:'',iconSize:[18,18]});
     L.marker(center,{icon}).addTo(flagLayer);
   });
 }
 
-/* HUD */
+/* ==== HUD ==== */
 function renderHUD(nome){
   const d=statoComuni[nome];
   hudTitle.innerText='Comune di '+nome;
   hudSub.innerText=d.referenti.length
-    ? 'Referenti presenti: '+d.referenti.length
+    ? 'Referenti: '+d.referenti.length
     : '⚠ Comune orfano';
 
   refPanel.innerHTML='';
@@ -218,9 +230,34 @@ function renderHUD(nome){
     });
     refPanel.style.display='block';
   } else refPanel.style.display='none';
+
+  mostraFarmacie(nome);
 }
 
-/* COMUNI */
+/* ==== FARMACIE ==== */
+function mostraFarmacie(comune){
+  farmLayer.clearLayers();
+  farmacie.filter(f=>f.comune===comune).forEach(f=>{
+    const html = f.tipo==="privata"
+      ? `<div class="dot" style="background:#00ff9c"></div>`
+      : `<div class="triangle"></div>`;
+
+    const popup = `
+      <strong>${f.nome}</strong><br>
+      ${f.tipo}<br>
+      ${f.indirizzo}<br>
+      Tel: ${f.tel}<br>
+      <a target="_blank" href="https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(f.nome+' '+comune)}">Apri Maps</a><br>
+      <a target="_blank" href="https://drive.google.com/drive/folders/1f9JTPwuquc1epCO6rpsONh2fFes8yabm">Materiali</a>
+    `;
+
+    L.marker([f.lat,f.lng],{
+      icon:L.divIcon({html,iconSize:[16,16],className:''})
+    }).bindPopup(popup).addTo(farmLayer);
+  });
+}
+
+/* ==== COMUNI ==== */
 fetch('data/comuni_verona.json')
 .then(r=>r.json())
 .then(data=>{
@@ -234,7 +271,7 @@ fetch('data/comuni_verona.json')
       const n=nomeComune(f.properties);
       layerComuni[n]=l;
 
-      const label=L.marker(l.getBounds().getCenter(),{
+      const lbl=L.marker(l.getBounds().getCenter(),{
         icon:L.divIcon({className:'label-comune',html:n})
       }).addTo(map);
 
@@ -248,11 +285,12 @@ fetch('data/comuni_verona.json')
       });
     }
   }).addTo(map);
+
   aggiornaContatori();
   aggiornaBandiere();
 });
 
-/* BOTTONI */
+/* ==== BOTTONI ==== */
 btnAdd.onclick=()=>{
   if(!selectedComune) return alert('Seleziona un comune');
   const n=prompt('Nome referente');
